# task-localhost

./: .gitignore  README.md  devrun  do  extra.md  settings
_temp/: readme.md
_temp/coco/: cgi_curl  config  rawfragment  rawfragmentwithremoveclient  resolve_curl  settings
cgi/: useless.py
localhost/: Cargo.toml
localhost/src/: debug.rs  main.rs  server.rs
localhost/src/files/: add_static.rs  check.rs
localhost/src/handlers/: handle_.rs  handle_all.rs  handle_cgi.rs  handle_redirected.rs  handle_uploads.rs  response_.rs  response_4xx.rs  response_500.rs  uploads_delete.rs  uploads_get.rs  uploads_set.rs
localhost/src/server/: cookie.rs  core.rs  find.rs  flow.rs  tired.rs
localhost/src/stream/: _read.rs  _read_unchunked.rs  errors.rs  parse.rs  read.rs  read_.rs  read_chunked.rs  read_unchunked.rs  write.rs  write_.rs  write_error.rs
static/: index.html
static/default/: default.html  empty.html  redirect.html
static/default/error/: 400.html  403.html  404.html  405.html  413.html  500.html
static/error/: 400.html  400_1.html  403.html  403_1.html  404.html  404_1.html  405.html  405_1.html  413.html  413_1.html  500_1.html
static/localhost/: empty.html
static/localhost/error/: 400.html  413.html  500.html
static/site1/: index.html  redirect.html
static/site1/error/: 400.html  403.html  404.html  405.html  413.html  500.html
