[package]
name = "localhost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
cookie = "0.18.0"
http = "0.2.11"
mime_guess = "2.0"
mio = { version = "0.8.9", features = ["net", "os-poll"] }
sanitise-file-name = "1.0.0"
serde = "1.0"
uuid = "1.6.1"
walkdir = "2"
